# OpenArm-Grasping-System

./: README.md
joint_state_pkg/: package.xml  setup.cfg  setup.py
joint_state_pkg/joint_state_pkg/: joint_state_subscriber.py
mtc_tutorial/: CMakeLists.txt  package.xml
mtc_tutorial/launch/: mtc_demo.launch.py  pick_place_demo.launch.py
mtc_tutorial/src/: mtc_tutorial.cpp
openarm_cam_pkg/: CMakeLists.txt  package.xml
openarm_cam_pkg/src/: image_publisher.cpp
openarm_can/: .editorconfig  .gitignore  CMakeLists.txt  README.md  Rakefile  helper.rb  package.xml
openarm_can/.github/workflows/: package.yaml  test.yaml
openarm_can/dev/: README.md
openarm_can/include/openarm/damiao_motor/: dm_motor_constants.hpp  dm_motor_control.hpp  dm_motor_device_collection.hpp
openarm_can/python/: build.sh  meson.build  pyproject.toml
openarm_can/python/examples/: example.py  test_posvel.py
openarm_can/python/openarm/can/: __init__.py
openarm_can/python/src/: openarm_can.cpp
openarm_can/python/subprojects/: .gitignore  openarm-can.wrap
openarm_can/setup/: motor_check.cpp  openarm-can-change-baudrate  openarm-can-configure-socketcan  openarm-can-configure-socketcan-4-arms  openarm-can-set-zero  openarm_can_diagnosis.cpp
openarm_can/src/openarm/damiao_motor/: dm_motor_control.cpp  dm_motor_device_collection.cpp
openarm_description/: .gitignore
openarm_description/.github/workflows/: release.yaml  test.yaml
openarm_description/config/arm/v10/: joint_limits.yaml
openarm_description/config/hand/openarm_hand/: inertials.yaml
openarm_description/launch/: display_openarm.launch.py
openarm_description/rviz/: mtc.rviz
openarm_description/urdf/: openarm.ros2_control.xacro  openarm.urdf.xacro
openarm_description/urdf/arm/: openarm_arm.xacro
openarm_description/urdf/body/: openarm_body.xacro
openarm_description/urdf/environment/: environment.xacro  objects.xacro  table.xacro
openarm_description/urdf/robot/: v10.urdf.xacro
openarm_description/urdf/ros2_control/: openarm.bimanual.ros2_control.xacro
openarm_joint_control/: package.xml  setup.cfg  setup.py
openarm_joint_control/openarm_joint_control/: openarm_joint_controller.py
openarm_moveit_config/: .setup_assistant
openarm_moveit_config/config/: joint_limits.yaml  moveit_controllers.yaml  openarm.srdf  openarm.urdf.xacro  ros2_controllers.yaml
openarm_moveit_config/launch/: demo_test.launch.py
openarm_mujoco/: DEPTH_CAMERA_README.md  depth_camera_example.py  l.md  test.py
openarm_mujoco/v1/: convert_ycb_to_mujoco.py  fix_ycb_objects.py  openarm_bimanual.xml  scene_withcamera.xml
yolo_target_detection/: package.xml  setup.cfg  setup.py
yolo_target_detection/yolo_target_detection/: yolo_target_detection.py
