<?xml version="1.0"?>
<!-- Copyright 2025 Enactic, Inc.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License. -->
<package format="3">
  <name>openarm_can</name>
  <version>1.1.0</version>
  <description>Low-level SocketCAN library and tools for OpenArm manipulators.</description>
  <maintainer email="openarm_dev@enactic.ai">Enactic, Inc.</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
